<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        android:padding="20sp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10sp"
            android:text="@string/heading"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/title_description_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:autofillHints="@string/Name"
            android:hint="@string/Name"
            android:inputType="text"
            android:textSize="23sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/phNum"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/Phone"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="#78909C"
            android:textSize="23sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/ctznId"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/ctzn_id"
            android:hint="@string/ctzn_id"
            android:inputType="text"
            android:textSize="23sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25sp"
            android:text="@string/registerBtn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/register_hint"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>