<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"
        tools:context=".DataDisplayActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10sp"
            android:text="@string/heading"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="10sp"
            android:text="@string/tips"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tipsUi"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_marginTop="15dp"
                android:lineHeight="40sp"
                android:padding="10sp"
                android:text="@string/tip1"
                android:textSize="20sp"
                android:textStyle="normal" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/userData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:padding="10sp"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="40dp" />

        <Button
            android:id="@+id/sosBtn"
            android:layout_width="185dp"
            android:layout_height="65dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:text="@string/sosBtn"
            android:textAllCaps="true"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
